--- a/addon/components/modals/policy-form.hbs
+++ b/addon/components/modals/policy-form.hbs
@@ -2,19 +2,19 @@
     <div class="modal-body-container" ...attributes>
         <div class="input-group">
             <label>
-                Policy Name
+                {{t "iam.components.modals.policy-form.policy-name"}}
             </label>
-            <Input @value={{@options.policy.name}} @type="text" class="w-full form-input" placeholder="Enter a name for your policy" />
+            <Input @value={{@options.policy.name}} @type="text" class="w-full form-input" placeholder={{t "iam.components.modals.policy-form.enter-name-your-policy"}} />
         </div>
         <div class="input-group">
             <label>
-                Policy Description
+                {{t "iam.components.modals.policy-form.policy-description"}}
             </label>
-            <Input @value={{@options.policy.description}} @type="text" class="w-full form-input" placeholder="Enter a description for your policy" />
+            <Input @value={{@options.policy.description}} @type="text" class="w-full form-input" placeholder={{t "iam.components.modals.policy-form.enter-description-your-policy"}} />
         </div>
         <div class="input-group">
             <label>
-               Select Permissions
+               {{t "iam.components.modals.policy-form.select-permissions"}}
             </label>
             <PermissionPicker @selected={{@options.policy.permissions}} @onChange={{fn (mut @options.policy.permissions)}} />
         </div>
