--- a/addon/components/table/cell/group-members.hbs
+++ b/addon/components/table/cell/group-members.hbs
@@ -6,6 +6,6 @@
             </a>
         </div>
     {{else}}
-        <span>No Members</span>
+        <span>{{t "iam.components.table.group-members.no-member"}}</span>
     {{/each}}
 </div>
