--- a/addon/templates/application.hbs
+++ b/addon/templates/application.hbs
@@ -1,10 +1,10 @@
 <EmberWormhole @to="sidebar-menu-items">
-    <Layout::Sidebar::Panel @open={{true}} @title="Access Management">
-        <Layout::Sidebar::Item @route="console.iam.home" @icon="home">Dashboard</Layout::Sidebar::Item>
-        <Layout::Sidebar::Item @route="console.iam.users" @icon="id-card">Users</Layout::Sidebar::Item>
-        <Layout::Sidebar::Item @route="console.iam.groups" @icon="building">Groups</Layout::Sidebar::Item>
-        <Layout::Sidebar::Item @route="console.iam.roles" @icon="tag">Roles</Layout::Sidebar::Item>
-        <Layout::Sidebar::Item @route="console.iam.policies" @icon="shield">Policies</Layout::Sidebar::Item>
+    <Layout::Sidebar::Panel @open={{true}} @title={{t "iam.application.access-management"}}>
+        <Layout::Sidebar::Item @route="console.iam.home" @icon="home">{{t "iam.common.dashboard"}}</Layout::Sidebar::Item>
+        <Layout::Sidebar::Item @route="console.iam.users" @icon="id-card">{{t "iam.common.user"}}</Layout::Sidebar::Item>
+        <Layout::Sidebar::Item @route="console.iam.groups" @icon="building">{{t "iam.common.group"}}</Layout::Sidebar::Item>
+        <Layout::Sidebar::Item @route="console.iam.roles" @icon="tag">{{t "iam.common.role"}}</Layout::Sidebar::Item>
+        <Layout::Sidebar::Item @route="console.iam.policies" @icon="shield">{{t "iam.common.policie"}}</Layout::Sidebar::Item>
     </Layout::Sidebar::Panel>
 </EmberWormhole>
 
