--- a/addon/components/modals/group-details.hbs
+++ b/addon/components/modals/group-details.hbs
@@ -3,7 +3,7 @@
         <div class="grid grid-cols-3 gap-2 text-xs dark:text-gray-100">
             <div class="col-span-3 mb-5">
                 <label class="block mb-2 font-bold">
-                    Group Name
+                    {{t "iam.components.modals.group-details.group-name"}}
                 </label>
                 <span class="block truncate">
                     {{n-a @options.group.name}}
@@ -12,7 +12,7 @@
 
             <div class="mb-5">
                 <label class="block mb-2 font-bold">
-                    Members
+                    {{t "iam.common.member"}}
                 </label>
                 <span class="block truncate">
                     {{n-a @options.user.internal_id}}
@@ -21,7 +21,7 @@
 
             <div class="mb-5">
                 <label class="block mb-2 font-bold">
-                    Status
+                    {{t "iam.common.status"}}
                 </label>
                 <Badge @status={{@options.vendor.status}} />
             </div>
@@ -30,7 +30,7 @@
 
             <div class="col-span-2 mb-5">
                 <label class="block mb-2 font-bold">
-                    Address
+                    {{t "iam.common.address"}}
                 </label>
                 <div>
                     {{n-a (html-safe @options.vendor.address)}}
