--- a/addon/templates/home.hbs
+++ b/addon/templates/home.hbs
@@ -1,4 +1,4 @@
-<Layout::Section::Header @title="Identity & Access Management" @hideActions={{true}} />
+<Layout::Section::Header @title={{t "iam.home.identity-access-management"}} @hideActions={{true}} />
 
 <Layout::Section::Body>
     <div class="container mx-auto h-screen" {{increase-height-by 800}}>
