--- a/addon/components/permission-picker.hbs
+++ b/addon/components/permission-picker.hbs
@@ -7,7 +7,7 @@
             <div>
                 {{#if this.isLoading}}
                     <div class="mx-2">
-                        <Spinner @iconClass="text-sky-500" />
+                        <Spinner @iconClass="text-magicpurple-500" />
                     </div>
                 {{/if}}
             </div>
@@ -30,7 +30,7 @@
             {{#unless this.isPermissionsLoaded}}
                 <div class="flex text-center items-center justify-center py-4 dark:text-gray-100">
                     <div class="mr-2">
-                        <Spinner @iconClass="text-sky-500" />
+                        <Spinner @iconClass="text-magicpurple-500" />
                     </div>
                     <span>{{t "iam.components.permission-picker.loading-permission"}}</span>
                 </div>
