--- a/addon/components/modals/group-form.hbs
+++ b/addon/components/modals/group-form.hbs
@@ -32,7 +32,7 @@
                                     {{user.name}}
                                 </span>
                                 <span>
-                                    <a href="javascript:;" class="text-blue-300 no-underline hover:text-blue-500" {{on "click" (fn
+                                    <a href="javascript:;" class="text-magicpurple-300 no-underline hover:text-magicpurple-500" {{on "click" (fn
                                         @options.removeUser user)}}>
                                         <FaIcon @icon="times" @prefix="fas" />
                                     </a>
